# FishRosLearning

./: .gitignore  CLAUDE.md  fishros.md
SKILLS/: gitcreate.md
docs/: CLAUDE.md  requirement.md  status.md
docs/tutorial/algorithms_dis/: fast-lio-ros2-description.md  fast-livo2-description.md  hesai-lidar-ros2-description.md
docs/tutorial/haihang/: tutorial_aruco_recharge_20250624.md  tutorial_go2gestureworkspace.md  tutorial_go2sportworkspace.md  tutorial_jetson_benchmarks.md
docs/tutorial/unitree_dis/: README.md  possibleUse_sdk_tutorial.md  slam_gap.md  slam_go2_tutorial.md  slam_go2w_tutorial.md  slam_lack.md
learning/: hello_world.cpp
learning/1/: CMakeLists.txt  hellow_world.cpp
learning/2_node/2.1.1python_node_1/: node.py
learning/2_node/2.1.2c++_node/: CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  node  node.cpp
learning/2_node/2.1.2c++_node/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
learning/2_node/2.2colcon/pkg1/: setup.py
learning/2_node/2.2pkgpy/: wrong.md
learning/2_node/2.2pkgpy/pkg1/: package.xml
learning/2_node/2.2pkgpy/pkg1/pkg1/: node_2.py
learning/2_node/2.3/pkgcpp/: CMakeLists.txt  wrong.md
learning/2_node/2.5pr/2.5.3thread/cpp/: thread.cpp
learning/2_node/2.5pr/2.5.3thread/py/: thread.py
learning/2_node/2.5pr/c++/pkgcpp/pkgcpp/: CMakeLists.txt  package.xml
learning/2_node/2.5pr/c++/pkgcpp/pkgcpp/src/: auto_shared.cpp  function.cpp  lambda.cpp  node2.cpp  tonoe.cpp
learning/3_topic/3.1~3.3/: pub.cpp  publisher.py  subscriber.py
learning/3_topic/3.4interface/src/pub/: package.xml  setup.py
learning/3_topic/3.4interface/src/pub/pub/: pub.py
learning/3_topic/3.4interface/src/status_interfaces/: CMakeLists.txt  package.xml
learning/4_service_launch/cpp/launch/: act.launch.py  tur.launch.py
learning/4_service_launch/cpp/src/interfaces/: CMakeLists.txt  package.xml
learning/4_service_launch/cpp/src/tur_control/: CMakeLists.txt  package.xml
learning/4_service_launch/cpp/src/tur_control/src/: srv_cli.cpp  turtle.cpp
learning/4_service_launch/py/src/face_srv/: package.xml  setup.cfg  setup.py
learning/4_service_launch/py/src/interfaces/: CMakeLists.txt  package.xml
learning/4_service_launch/src/interfaces/srv/: FaceDetector.srv
learning/5_tf_bag/src/tf/: setup.py
learning/5_tf_bag/src/tf/cpp/: CMakeLists.txt
learning/5_tf_bag/src/tf/cpp/src/: dyn_tf_bcast.cpp  static_tf_bcast.cpp  tf_lsnr.cpp
learning/5_tf_bag/src/tf/py/: package.xml
learning/5_tf_bag/src/tf/tf/: dta_tf.py
learning/6_sim/src/description/: CMakeLists.txt  package.xml
learning/6_sim/src/description/launch/: gz.launch.py  urdf.launch.py  xacro_urdf.launch.py
learning/6_sim/src/description/urdf/: rob.gv  rob.urdf  rob.xacro
learning/6_sim/src/description/world/: default.sdf
ros2bookcode/: .gitignore  README.md
ros2bookcode/chapt1/: CMakeLists.txt  hello_world.cpp
ros2bookcode/chapt10/chapt10_ws/: shm.xml  topic_sub_limit.xml
ros2bookcode/chapt10/chapt10_ws/src/learn_compose/: CMakeLists.txt  package.xml
ros2bookcode/chapt10/chapt10_ws/src/learn_dds_cpp/: CMakeLists.txt  package.xml
ros2bookcode/chapt10/chapt10_ws/src/learn_executor_cpp/: CMakeLists.txt  package.xml
ros2bookcode/chapt10/chapt10_ws/src/learn_executor_py/: package.xml  setup.cfg  setup.py
ros2bookcode/chapt10/chapt10_ws/src/learn_lifecyclenode_cpp/: CMakeLists.txt  package.xml
ros2bookcode/chapt10/chapt10_ws/src/learn_lifecyclenode_py/: package.xml  setup.cfg  setup.py
ros2bookcode/chapt10/chapt10_ws/src/learn_message_filter_cpp/: CMakeLists.txt  package.xml
ros2bookcode/chapt10/chapt10_ws/src/learn_message_filter_py/: package.xml  setup.cfg  setup.py
ros2bookcode/chapt10/chapt10_ws/src/learn_qos_cpp/: CMakeLists.txt  package.xml
ros2bookcode/chapt10/chapt10_ws/src/learn_qos_py/: package.xml  setup.cfg  setup.py
ros2bookcode/chapt10/rosbag2_message_filter/: metadata.yaml
ros2bookcode/chapt2/: CMakeLists1.txt  ros2_cpp_node.cpp  ros2_python_node.py
ros2bookcode/chapt2/chapt2_ws/: novel1.txt  novel2.txt  novel3.txt
ros2bookcode/chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
ros2bookcode/chapt5/: frames_2023-12-10_15.19.49.gv  rviz_tf.rviz
ros2bookcode/chapt5/learn_git/: CMakeLists.txt  package.xml
ros2bookcode/chapt5/rosbag2_2023_12_11-01_57_18/: metadata.yaml
ros2bookcode/chapt7/chapt7_ws/: README.md
ros2bookcode/chapt9/example_imu/: platformio.ini
ros2bookcode/chapt9/example_imu/src/: main.cpp
ros2bookcode/chapt9/example_led/: platformio.ini
ros2bookcode/chapt9/example_led/src/: main.cpp
ros2bookcode/chapt9/example_project/src/: main.cpp
ros2bookcode/chapt9/example_ultrasound/src/: main.cpp
ros2bookcode/chapt9/fishbot_motion_control/: platformio.ini
ros2bookcode/chapt9/fishbot_motion_control/src/: main.cpp
ros2bookcode/chapt9/fishbot_motion_control/test/: 9.4.1.cpp  9.4.2.cpp
ros2bookcode/chapt9/fishbot_motion_control_9.3.4/: platformio.ini
ros2bookcode/chapt9/fishbot_motion_control_9.3.4/src/: main.cpp
ros2bookcode/chapt9/fishbot_motion_control_9.3/src/: main.cpp
ros2bookcode/chapt9/fishbot_motion_control_9.4.1/: README.md
ros2bookcode/chapt9/fishbot_motion_control_9.4.1/src/: main.cpp
(+169 files in other folders)
