<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkgcpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Yingkai.Shao25@student.xjtlu.edu.cn">chuil</maintainer>
  <license>MIT</license>
  <depend>rclcpp</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
